# madeleine-rust

./: Brewfile  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  INSTALL.md  Justfile  NOTICE  README.md  rustfmt.toml
benches/: naive.rs
examples/: hash_map.rs
src/: command.rs  command_log.rs  lib.rs  madeleine.rs  madeleine_error.rs  madeleine_result.rs  result.rs
src/queries/: count_commands.sql  count_commits.sql  create_command_log_table.sql  create_log_table.sql  insert_command.sql  insert_commit.sql
