[package]
name = "madeleine"
version = "0.2.0"
edition = "2021"
description = "Transparent object persistence with predefined operations and state containers."
authors = ["Jonathan E. Magen <59451+yonkeltron@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Evernorth/madeleine-rust"
repository = "https://github.com/Evernorth/madeleine-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commitlog = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0"
ulid = { version = "1.0.0", features = ["serde"] }

[dev-dependencies]
assert_fs = "1.0.13"
criterion = "0.4.0"
predicates = "3.0.3"
pretty_assertions = "1.3.0"

[[bench]]
name = "naive"
harness = false